History of this buildout
========================

5.1.8 (unreleased)
------------------

- When adding/editing an agenda item, set the mimetype to text/html.
  The add-form would show a rich text editor, but when you did not
  enter anything and later wanted to edit it again, you got a basic
  text area and you could not save changes anymore.
  [maurits]


5.1.7 (2015-05-27)
------------------

- Pillow 2.8.1.  You have to install an extra dependency first:
  sudo apt-get install libfreetype6-dev
  This makes sure captchas on the registration form work again.
  [maurits]


5.1.6 (2015-05-27)
------------------

- Fix wrong links in projects list.
  [maurits]


5.1.5 (2015-04-21)
------------------

- Comment out memmon in supervisor.  Let's see how often this is still
  a problem after the update.
  [maurits]


5.1.4 (2015-04-21)
------------------

- Add script for cleaning up non-existing users from various lists in
  PAS (Pluggable Authentication Service, acl_users).  Please enable
  this on ONE oefen and ONE productie instance by adding the
  crontab-cleanup-pas to the parts in buildout.cfg.
  [maurits]

- Make deleting users much much faster.  It was really slow, or not
  working because of a memory cutoff, due to recursive deletion of
  local roles.  Now we check local roles until a fluid depth, which
  avoids waking up all objects in the site.
  [maurits]

- Log a bit more while migrating.
  [maurits]


5.1.3 (2015-04-01)
------------------

- Add note in ZEST_RELEASE_NOTES.txt about stopping memmon before
  doing an upgrade.
  [maurits]


5.1.2 (2015-04-01)
------------------

- Set memmonlimit to 1750 MB everywhere.
  Differences may be in order, but are too irritating.
  [maurits]


5.1.1 (2015-04-01)
------------------

- Increase memmonlimit to 1750MB.  It just restarts far too often.
  Hopefully our recent changes help.
  [maurits]

- Use progress handler in reindex upgrade step.  Hopefully avoids
  MemoryError.
  [maurits]


5.1.0 (2015-04-01)